crates/hir-ty/tests/snapshots/jls_imports__unknown_package.snap
---
source: crates/hir-ty/tests/jls_imports.rs
expression: out
---
FILE /src/com/example/Imports.java:
package com.example;

import com.nonexistent.pkg.*;
import java.*;

class Imports {}

method : unresolved-import-package: @2:0Package 'com.nonexistent.pkg' does not exist
method : unresolved-import-package: @3:0Package 'java' does not exist
