crates/hir-ty/tests/snapshots/jls_imports__unknown_static_import_type.snap
---
source: crates/hir-ty/tests/jls_imports.rs
expression: out
---
FILE /src/com/example/Imports.java:
package com.example;

import static bogus.Type.*;
import static java.lang.MissingUtility.*;

class Imports {}

@2:0: unresolved-import-package: Package 'bogus' does not exist
@3:0: unresolved-static-import: Cannot resolve symbol 'MissingUtility'
